# csv-analysis

./: pyproject.toml
csv_analysis/: __main__.py  app.py  main.py  research.py
csv_analysis/templates/: index.html
tests/: test_csv_analysis.py
