[tool.poetry]
name = "csv-analysis"
version = "0.1.0"
description = ""
authors = ["David Abreu <david.abreu@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.2"
plotly = "^5.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.12b0"
aiohttp = "^3.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
